[package]
name = "lazerpay-rust-sdk"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "This crate integrates the Lazerpay payment gateway for accepting cryptocurrency payments."
homepage = "https://github.com/Lord-sarcastic/lazerpay-rust-sdk"
repository = "https://github.com/Lord-sarcastic/lazerpay-rust-sdk"
readme = "README.md"
keywords = ["lazerpay", "crypto", "fintech", "web3", "payment"]
categories = ["web-programming::http-client", "cryptography::cryptocurrencies"]
authors = ["Ayodeji <adeoti.15.jude@gmail.com>", "Enoch <enochchejieh@gmail.com>"]
exclude = ["example/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
envy = "0.4.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
erased-serde = "0.3"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
anyhow = "1.0.55"
