[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "example"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
envy = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.12.0", features = ["full"] }
lazerpay-rust-sdk = { version = "0.1.0", path = ".." }